Fix icon vertical alignment in headings

--- a/packages/docs/src/styles/pages/contact.scss
+++ b/packages/docs/src/styles/pages/contact.scss
@@ -1,10 +1,7 @@
-.l-feedback {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  margin-top: $spacer-2;
-
-  p {
-    margin: 0;
+#page--not-in-sidebar_contact {
+  h2 {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
   }
 }
